add some more block entities